@@ -14,8 +14,7 @@
 void
 testTortureExecute (void)
 {
-#ifndef __SDCC_mcs51
-#if 0
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_stm8)
   int t[1025] = { 1024 }, d;
 
   d = 0;
@@ -26,5 +25,5 @@ testTortureExecute (void)
     ASSERT (0);
   return;
 #endif
-#endif
 }
+
